--- a/core/static/core/podcast.css
+++ b/core/static/core/podcast.css
@@ -1,13 +1,295 @@
-/* Podcast Page */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+body {
+    background-color: #000;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+@font-face {
+    font-family: Josefin Sans;
+    src: url('/static/core/fonts/JosefinSans-VariableFont_wght.ttf') format('truetype');
+    font-weight: 400;
+}
+@font-face {
+    font-family: Indie;
+    src: url('/static/core/fonts/IndieFlower-Regular.ttf') format('truetype');
+    font-weight: 400;
+}
+@font-face {
+    font-family: Permanent Marker;
+    src: url('/static/core/fonts/PermanentMarker-Regular.ttf') format('truetype');
+    font-weight: 700;
+}
+
+p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
+    font-family: Josefin Sans;
+}
+
+/* Menu */
+
+.topnav {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    height: 42px;
+    width: 100%;
+    border: none;
+    background-color: rgba(51, 61, 61, 0.959);
+    z-index: 3;
+}
+#navlogo {
+    position: absolute;
+    top: 20%;
+    left: 2%;
+    display: grid;
+    place-items: center;
+}
+#navlogo > img {
+    width: auto;
+    height: 27px;
+}
+.navmenu {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.navmenu a {
+    padding: 5px 16px;
+    text-decoration: none;
+    font-size: 12px;
+    color: #fff;
+    font-weight: 400;
+}
+.navmenu a:hover {
+    background-color: #ddd;
+    color: #000;
+    font-weight: bolder;
+}
+.menuactive {
+    font-weight: bolder;
+    cursor: pointer;
+    text-decoration: line-through;
+    color: #000;
+}
+
+/* Hamburger menu */
+
+.menu-btn {
+    position: absolute;
+    top: 10%;
+    right: 2%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 27px;
+    height: 27px;
+    cursor: pointer;
+    transition: all .4s ease-in-out;
+}
+.menu-btn__burger {
+    width: 14px;
+    height: 2px;
+    background: #fff;
+    border-radius: 4px;
+    transition: all .4s ease-in-out;
+}
+.menu-btn__burger::before,
+.menu-btn__burger::after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 2px;
+    background: #fff;
+    border-radius: 4px;
+    transition: all .4s ease-in-out;
+}
+.menu-btn__burger::before {
+    transform: translateY(-8px)
+}
+.menu-btn__burger::after {
+    transform: translateY(8px);
+}
+.menu-btn.open .menu-btn__burger{
+    transform: translateX(-18px);
+    background: transparent;
+}
+.menu-btn.open .menu-btn__burger::before{
+    transform: rotate(45deg) translate(10px, -10px);
+}
+.menu-btn.open .menu-btn__burger::after{
+    transform: rotate(-45deg) translate(10px, 10px);
+}
+
+/* Mobile menu */
+
+.mobile-menu {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    justify-content: space-between;
+    background-color: #242424;
+    position: fixed;
+    top: -27px;
+    width: 100%;
+    opacity: 0;
+    padding: 1rem;
+    transition: .4s ease-in-out;
+    z-index: 2;
+}
+.mobile-menu.show {
+    top: 27px;
+    opacity: 1;
+    display: flex;
+    z-index: 1;
+}
+.mobile-menu a,
+.mobile-menu a:hover {
+    font-size: 1rem;
+    line-height: 2em;
+    color: #fff;
+    text-decoration: none;
+}
+.mobile-menu .menuactive,
+.mobile-menu .menuactive:hover {
+    font-size: 1rem;
+    line-height: 2em;
+    color: #000000;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 980px) {
+    .navmenu {
+        display: none;
+    }
+    .menu-btn {
+        display: flex;
+    }
+}
+@media screen and (max-width: 769px) {
+    .topnav {
+        height: 33px;
+    }
+    #navlogo, #navsocial {
+        top: 10%;
+    }
+}
+
+/* Bottom */
+
+.bottom {
+    background-color: #e7e7e7;
+    border-top: 1px solid silver;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1% 2%;
+}
+#footersocial {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 10px;
+}
+.bottom a,
+.bottom a:hover {
+    font-weight: 600;
+    color: #000000;
+    font-size: 11px;
+    text-decoration: none;
+}
+@media screen and (max-width: 769px) {
+    .bottom {
+        padding: 3% 1%;
+        flex-direction: column;
+        grid-gap: 10px;
+    }
+}
+
+/* Footer player */
+
+footer {
+    background-color: #1b1b1bf5;
+    position: sticky;
+    bottom: 0;
+    padding: 1% 2%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    grid-gap: 8px;
+}
+
+.footerimage {
+    width: 54px;
+    height: 54px;
+    padding: 4px;
+    object-fit: cover;
+}
+.footerimage img {
+    width: auto;
+    height: 100%;
+}
+#footer-episode img {
+    border-radius: 7px;
+}
+
+.timer {
+    position: absolute;
+    left: -0.8;
+    top: 7;
+    font-family: monospace;
+    color: #FFFFFF;
+}
+.duration {
+    position: absolute;
+    right: 1%;
+    /* right: 50%; */
+    top: 4;
+    font-family: monospace;
+    color: #FFFFFF;
+}
+#timeline {
+    width: 100%;
+    position: relative;
+    height: 2px;
+    -webkit-border-radius: 15px;
+    border-radius: 15px;
+    background: #ffffffab;
+}
+#playhead {
+    /* bottom: 40; */
+    width: 8px;
+    height: 8px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    margin-top: -3px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 769px) {
+    footer {
+        padding: 2%;
+    }
+}
+
+/* Podcast Section */
 .podpage {
-    margin: 8vh 0;
+    margin: 8vh 0 0 0;
 }
 #intro {
+    position: relative;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-gap: 20px;
-    padding: 0% 10% 0% 10%;
+    padding: 0% 10% 40vh 10%;
 }
 #side {
     display: grid;
@@ -51,6 +333,7 @@
     padding: 1% 3%;
     text-decoration: none;
     display: block;
+    z-index: 1;
 }
 .dropdown-content a:hover {
     background-color: gray;
@@ -59,16 +342,13 @@
     display: block;
 }
 .section2 {
-    padding: 4em 2em 4em 2em;
+    background-color: #e7e7e7;
+    padding: 10vh 10vw 4vh 10vw;
 }
 .container {
     display: grid;
-    grid-template-columns: 22% 22% 22% 22%;
-    grid-template-rows: auto; 
-    column-gap: 2%;
-    row-gap: 3%;
-    padding: 0%;
-    margin: 0%;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 8px;
 }
 .podcast-epi {
     position: relative;
@@ -94,46 +374,83 @@
 
 @media screen and (max-width: 690px) {
     .podpage {
-        margin: 0 0 8vh 0;
+        margin: 0 0 0 0;
     }
     #intro {   
         grid-template-columns: 1fr;
-        padding: 0;
+        padding: 0 0 20vh 0;
     }
     #side {
         grid-gap: 30px;
+        padding: 0 1em;
     }
     #pod-deet p {
         font-size: 20px;
         line-height: 1.4rem;
     }
     .dropdown-content {
-        min-width: 27%;
+        min-width: 40%;
     }
     .section2 {
-        padding: 7em 1em 4em 1em;
+        padding: 7vh 1vw;
     }
     .container {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto;
-        column-gap: 2em;
-        row-gap: 2em;
+        grid-template-columns: 1fr 1fr;
     }
     .epi-id {
         top: 7px;
         left: 7px;
-        font-size: 24px;
+        font-size: 18px;
         padding: 1px 4px;
     }
     .epi-deet {
         bottom: 0px;
-        font-size: 17px;
+        font-size: 14px;
         padding: 4px 2px;
         line-height: 1.4;
     }
 }
 @media screen and (max-width: 769px) {
     .container {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+/* Curve */
+
+.curve {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.curve svg {
+    position: relative;
+    display: block;
+    width: calc(144% + 1.3px);
+    height: 245px;
+    transform: rotateY(180deg);
+}
+
+.curve .shape-fill {
+    fill: #e7e7e7;
+}
+
+/** For tablet devices **/
+@media (min-width: 768px) and (max-width: 1023px) {
+    .curve svg {
+        width: calc(126% + 1.3px);
+        height: 127px;
+    }
+}
+
+/** For mobile devices **/
+@media (max-width: 767px) {
+    .curve svg {
+        width: calc(134% + 1.3px);
+        height: 80px;
     }
 }
