podcast homepage design complete

--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -101,11 +101,10 @@
         </section>
         {% endfor %}
     </div>
-
-    <div class="centered">
-        <button id="loadnext">SHOW MORE</button>
-    </div>
-
 </div>
+
+<!-- <div class="centered">
+    <button id="loadnext">SHOW MORE</button>
+</div> -->
     
 {% endblock body %}
