--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -179,6 +179,7 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 /* Footer */
 
 footer {
+    position: relative;
     border-top: 1px solid silver;
     display: flex;
     flex-direction: row;
