--- a/core/static/core/blog.css
+++ b/core/static/core/blog.css
@@ -1,5 +1,5 @@
 .blogpage {
-    margin: 4% 3% 10% 3%;
+    margin: 40px 1vw 40px 1vw;
 }
 .blogpage .centered {
     width: 100%;
@@ -9,12 +9,11 @@
 #blogs {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     grid-gap: 4% 2%;
-    margin: 4% 0;
+    margin: 40px 0 0 0;
 }
-#blogs a {
-    text-decoration: none;
-}
+#blogs a,
 #blogs a:hover {
     text-decoration: none;
 }
@@ -58,7 +57,6 @@
     color: gray;
     font-size: 11px;
     font-weight: 400;
-    bottom: 0;
 }
 button {
     font-family: Josefin Sans;
@@ -73,6 +71,12 @@ button {
     display: none;
 }
 
+@media only screen and (max-width: 1027) {
+    #blogs {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
 @media only screen and (max-width: 769px) {
     .articlediv {
         filter: none;
@@ -83,11 +87,15 @@ button {
     }
 }
 @media only screen and (max-width: 500px) {
+    .blogpage {
+        margin: 30px 1vw 70px 1vw;
+    }
     .articlediv {
         filter: none;
     }
     #blogs {
         grid-template-columns: 1fr;
         grid-gap: 20px;
+        margin: 30px 0 0 0;
     }
 }
