--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -25,13 +25,10 @@
 
         <!-- Load css file -->
         <link rel="stylesheet" href="{% static 'core/podcast.css' %}">
-        {% block style %}
-        {% endblock style %}
 
         <!-- Load js file -->
         <script src="{% static 'core/podcast.js' %}"></script>
-        {% block script %}
-        {% endblock script %}
+
     </head>
 
     <body>
@@ -50,17 +47,14 @@
         </nav>
 
         <div class="mobile-menu">
-
             <a href="{% url 'core:index' %}">HOME</a>
             <a href="{% url 'core:blogpage' %}">BLOG</a>
             <a class="menuactive">PODCAST</a>
-
             {% if user.is_authenticated %}
                 <a href="#">ACCOUNT</a>
             {% else %}
                 <a href="#">SIGN IN</a>
             {% endif %}
-
         </div>
 
         <div class="podpage">
@@ -93,11 +87,14 @@
                 <div class="container">
                     {% for episode in podcast.episodes.all %}
                     <div class="podcast-epi">
-                        <a href="{% url 'core:episode' s=episode.season e=episode.id slug=episode.slug %}">
-                            <img src="{{ episode.image.url }}" alt="{{ episode.title }}" style="width: 100%; height: auto;">
-                            <p class="epi-id">#{{ episode.id }}</p>
-                            <p class="epi-deet">{{ episode.title }}</p>
-                        </a>
+                        <!-- <a href="{% url 'core:episode' s=episode.season e=episode.id slug=episode.slug %}">
+                        </a> -->
+                        <img src="{{ episode.image.url }}" alt="{{ episode.title }}" style="width: 100%; height: auto;">
+                        <p class="epi-id">#{{ episode.id }}</p>
+                        <p class="epi-deet">{{ episode.title }}</p>
+                        <div id="epi-pButton" class="epi-play">
+                            <img src="{% static 'core/icons/playnow.png' %}" alt="play episode" style="width: 100%; height: 100%;">
+                        </div>
                     </div>
                     {% endfor %}
                 </div>
