--- a/static_cdn/core/articlelayout.css
+++ b/static_cdn/core/articlelayout.css
@@ -91,7 +91,7 @@
     margin-bottom: 2em;
 }
 .content p:first-child::first-letter {
-    font-family: 'IM Fell English', serif;
+    font-family: CrimsonPro;
     padding: 0 .2em;
     font-size: 7em;
     float: left;
@@ -172,8 +172,8 @@
     }
     .content p:first-child::first-letter {
         padding: 0 .1em;
-        font-size: 5em;
-        line-height: 1.1em;
+        font-size: 7em;
+        line-height: 0.7em;
     }
     .content p, a, a:hover {
         line-height: 1.4em;
