--- a/static_cdn/core/base.css
+++ b/static_cdn/core/base.css
@@ -69,7 +69,7 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     color: #000;
     font-weight: bolder;
 }
-#menuactive {
+.menuactive {
     font-weight: bolder;
     cursor: pointer;
     text-decoration: line-through;
@@ -127,22 +127,22 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 /* Mobile menu */
 
 .mobile-menu {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    justify-content: space-between;
     background-color: #242424;
     position: fixed;
     top: -27px;
     width: 100%;
     opacity: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-gap: 1em;
     padding: 1rem;
     transition: .4s ease-in-out;
 }
 .mobile-menu.show {
     top: 27px;
     opacity: 1;
+    display: flex;
 }
 .mobile-menu a,
 .mobile-menu a:hover {
@@ -151,8 +151,8 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     color: #fff;
     text-decoration: none;
 }
-.mobile-menu #menuactive,
-.mobile-menu #menuactive:hover {
+.mobile-menu .menuactive,
+.mobile-menu .menuactive:hover {
     font-size: 1rem;
     line-height: 2em;
     color: #000000;
@@ -179,7 +179,6 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 /* Footer */
 
 footer {
-    width: 100%;
     border-top: 1px solid silver;
     display: flex;
     flex-direction: row;
