--- a/static_cdn/core/blog.css
+++ b/static_cdn/core/blog.css
@@ -1,20 +1,16 @@
 .blogpage {
-    padding: 0% 3%;
-    margin: 2em 0;
-    display: flex;
-    flex-direction: column;
-    grid-gap: 20px;
+    margin: 4% 3% 10% 3%;
 }
-.blogpage #pagetitle {
+.blogpage .centered {
+    width: 100%;
     display: grid;
     place-items: center;
 }
 #blogs {
-    width: 100%;
     display: grid;
-    display: -moz-grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 4% 2%;
+    margin: 4% 0;
 }
 #blogs a {
     text-decoration: none;
@@ -31,7 +27,7 @@
 }
 #blogs .blogimage {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 #blogs .blogmeta {
     margin: 2% 0% 0% 0%;
