homepage build finalized

--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -103,8 +103,8 @@
     </div>
 </div>
 
-<!-- <div class="centered">
+<div class="centered">
     <button id="loadnext">SHOW MORE</button>
-</div> -->
+</div>
     
 {% endblock body %}
