--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -6,26 +6,62 @@
     -webkit-box-sizing: border-box;
 }
 @font-face {
-    font-family: Josefin Sans;
-    src: url('/static/core/fonts/JosefinSans-VariableFont_wght.ttf') format('truetype');
-    font-weight: 400;
-}
-@font-face {
     font-family: Indie;
     src: url('/static/core/fonts/IndieFlower-Regular.ttf') format('truetype');
     font-weight: 400;
 }
-@font-face {
-    font-family: Permanent Marker;
-    src: url('/static/core/fonts/PermanentMarker-Regular.ttf') format('truetype');
-    font-weight: 700;
-}
 body {
     background-color: #000000;
+    min-height: 100vh;
+}
+.container {
+    width: 100%;
+    height: 100vh;
+    max-width: 4000px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
 }
 #content {
-    position: relative;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+::-webkit-scrollbar {
+    display: none;
+}
+
+video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+/* @media (min-aspect-ratio: 16/9) {
+    video {
+        width: 100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio: 16/9) {
+    video {
+        height: 100%;
+        width: auto;
+    }
+} */
+
+section {
+    /* position: absolute; */
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 #imagediv {
     position: absolute;
@@ -36,7 +72,7 @@ body {
 }
 #image {
     border-radius: 50%;
-    border: 1px #c2c2c2b9 solid;
+    border: 1px #c2c2c28f solid;
     max-width: 7em;
     padding: 0.3em;
 }
@@ -54,7 +90,7 @@ body {
 a {
     font-family: Indie;
     font-size: 20px;
-    /* font-weight: 900; */
+    font-weight: 900;
     line-height: 1rem;
     text-decoration: none;
     color: #ffd900;
