podcast player js update

--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <title>Leroy Buliro</title>
-        <link rel="icon" type="image/png" href="{% static 'core/icons/lb.jpg' %}">
+        <link rel="icon" type="image/png" href="{% static 'core/media/lb.jpg' %}">
         <meta name="description" content="Leroy Buliro: deejay, financial advisor, writer, podcaster">
         <meta name="keyword" content="Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture">
 
@@ -56,7 +56,7 @@
                 
                 <section>
                     <div id="imagediv">
-                        <img id="image" src="{% static 'core/icons/about.jpg' %}" alt="leroy">
+                        <img id="image" src="{% static 'core/media/about.jpg' %}" alt="leroy">
                     </div>
                     <div id="links">
                         <a href="{% url 'core:blogpage' %}" >BLOG</a>
@@ -66,7 +66,7 @@
                     </div>
                 </section>
 
-                <video src="{% static 'core/videos/hpvid3.mp4' %}" autoplay muted loop></video>
+                <video src="{% static 'core/media/hpvid3.mp4' %}" autoplay muted loop></video>
 
             </div>
         </div>
