--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
-        <link rel="icon" type="image/png" href="{% static 'core/icons/lb.jpg' %}">
+        <link rel="icon" type="image/png" href="{% static 'core/media/lb.jpg' %}">
 
         <!-- meta -->
         <title>{{podcast.title}} | Leroy Buliro</title>
@@ -34,7 +34,7 @@
     <body>
         <nav class="topnav">
             <a id="navlogo" href="{% url 'core:index' %}">
-                <img src="{% static 'core/icons/atlbwhite.png' %}" alt="mail" >
+                <img src="{% static 'core/media/atlbwhite.png' %}" alt="mail" >
             </a>
             <div class="navmenu">
                 <a href="{% url 'core:index' %}">HOME</a>
@@ -124,9 +124,9 @@
                         </audio>
         
                         <div class="controls">
-                            <img class="pButton"  id="rev" src="{% static 'core/icons/replay_10.png' %}" alt="replay 10 seconds">
+                            <img class="pButton"  id="rev" src="{% static 'core/media/replay_10.png' %}" alt="replay 10 seconds">
                             <img  class="pButton" id="pButton2" src="" alt="play episode">
-                            <img class="pButton" id="fwd" src="{% static 'core/icons/forward_30.png' %}" alt="forward 30 seconds">
+                            <img class="pButton" id="fwd" src="{% static 'core/media/forward_30.png' %}" alt="forward 30 seconds">
                         </div>
                     </div>
                 </div>
@@ -136,8 +136,8 @@
     
         <div class="bottom">
             <div id="footersocial">
-                <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/icons/iconTT-black.png' %}" alt="twitter" width="auto" height="22" ></a>
-                <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/icons/iconIG-black.png' %}" alt="instagram" width="auto" height="22" ></a>
+                <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT-black.png' %}" alt="twitter" width="auto" height="22" ></a>
+                <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG-black.png' %}" alt="instagram" width="auto" height="22" ></a>
             </div>
             <a>© 2021 Leroy Buliro. All rights reserved.</a>
             <span>
