--- a/core/templates/core/blogbase.html
+++ b/core/templates/core/blogbase.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
-        <link rel="icon" type="image/png" href="{% static 'core/icons/lb.jpg' %}">
+        <link rel="icon" type="image/png" href="{% static 'core/media/lb.jpg' %}">
 
         <!-- meta author -->
         <meta name="author" content="Leroy Buliro">
@@ -34,7 +34,7 @@
     <body>
         <nav class="topnav">
             <a id="navlogo" href="{% url 'core:index' %}">
-                <img src="{% static 'core/icons/atlbwhite.png' %}" alt="mail" >
+                <img src="{% static 'core/media/atlbwhite.png' %}" alt="mail" >
             </a>
             <div class="navmenu">
                 {% block navmenu %}
@@ -60,8 +60,8 @@
     
         <footer>
             <div id="footersocial">
-                <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/icons/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
-                <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/icons/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
+                <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
+                <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
             </div>
             <a>© 2021 Leroy Buliro. All rights reserved.</a>
             <span>
