--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
-        <title>Leroy Buliro</title>
-        <link rel="icon" type="image/png" href="{% static 'core/media/lb.jpg' %}">
+        <title>Fueled By Leroy</title>
+        <link rel="icon" type="image/png" href="{% static 'core/media/fbl.jpg' %}">
         <meta name="description" content="Leroy Buliro: deejay, financial advisor, writer, podcaster">
         <meta name="keyword" content="Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture">
 
@@ -39,12 +39,12 @@
         <script type="application/ld+json">{
             "@context": "http://schema.org",
             "@type": "WebSite",
-              "name": "Leroy Buliro",
+              "name": "Fueled By Leroy",
               "author": "Leroy Buliro",
-              "description": "Leroy Buliro: deejay, financial advisor, writer, podcaster",
+              "description": "The official site of Leroy Buliro: deejay, writer, podcaster",
               "url": "https://leroybuliro.com",
               "schemaVersion": "10.0",
-              "keywords": "Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture",
+              "keywords": "Leroy Buliro, Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture",
             }
         </script>
         
