--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -1,11 +1,8 @@
 {% extends "core\blogbase.html" %}
 {% load static %}
 
-{% block title %}
-<title>{{ article.title }} | Leroy Buliro</title>
-{% endblock title %}
-
 {% block meta %}
+<title>{{ article.title }} | A-Z Logs, a blog by Leroy Buliro</title>
 <meta name="description" content="{{ article.extract }}">
 <meta name="keyword" content="{{episode.tags}}">
 
@@ -72,11 +69,11 @@
                 <div id="pubDate">{{ article.publishdate }}</div>
                 <hr style="border-top: 1px #000 solid; padding: 0% 20%; margin: 0;"/>
                 <div style="display: flex; flex-direction: row; justify-content: space-between; width: 40%;">
-                    <img src="{% static 'core/icons/share_black.png' %}" alt="share article" width="20" height="20" >
+                    <img src="{% static 'core/media/share_black.png' %}" alt="share article" width="20" height="20" >
                     <a href="#commentnow">
-                        <img src="{% static 'core/icons/comment_black.png' %}" alt="post comment" width="20" height="20" >
+                        <img src="{% static 'core/media/comment_black.png' %}" alt="post comment" width="20" height="20" >
                     </a>
-                    <img src="{% static 'core/icons/view_black.png' %}" alt="reads" width="20" height="20" >
+                    <img src="{% static 'core/media/view_black.png' %}" alt="reads" width="20" height="20" >
                 </div>
             </div>
         </section>
@@ -96,7 +93,7 @@
     </div>
 
     <div class="aboutsec" id="commentnow">
-        <img src="{% static 'core/icons/about.jpg' %}" alt="leroy" style="border-radius: 50%; border: 1px #c2c2c2b9 solid; max-width: 7em; padding: 0.3em;">
+        <img src="{% static 'core/media/about.jpg' %}" alt="leroy" style="border-radius: 50%; border: 1px #c2c2c2b9 solid; max-width: 7em; padding: 0.3em;">
         <div>
             <p class="header">Join the Discussion</h2>
             <p>Hi there. Welcome to my personal website, a place for me to log snapshots of my life over the years, share stories as told by others, and periodically post technical content that may interest a couple other people.<br>Thank you for being part of the community.</p>
