--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -8,10 +8,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
-        <link rel="icon" type="image/png" href="{% static 'core/media/lb.jpg' %}">
+        <link rel="icon" type="image/png" href="{% static 'core/media/fbl.jpg' %}">
 
         <!-- meta -->
-        <title>{{podcast.title}} | Leroy Buliro</title>
+        <title>{{podcast.title}} | A podcast by Leroy Buliro</title>
         <meta name="description" content="{{podcast.description}}">
         <meta name="keyword" content="{{podcast.tags}}">
         <meta name="author" content="Leroy Buliro">
@@ -34,12 +34,12 @@
     <body>
         <nav class="topnav">
             <a id="navlogo" href="{% url 'core:index' %}">
-                <img src="{% static 'core/media/atlbwhite.png' %}" alt="mail" >
+                <img src="{% static 'core/media/atlbwhite.png' %}" alt="logo" >
             </a>
             <div class="navmenu">
                 <a href="{% url 'core:index' %}">HOME</a>
                 <a href="{% url 'core:blogpage' %}">BLOG</a>
-                <a class="menuactive">PODCAST</a>
+                <a id="menuactive">PODCAST</a>
             </div>
             <div class="menu-btn">
                 <div class="menu-btn__burger"></div>
@@ -49,7 +49,7 @@
         <div class="mobile-menu">
             <a href="{% url 'core:index' %}">HOME</a>
             <a href="{% url 'core:blogpage' %}">BLOG</a>
-            <a class="menuactive">PODCAST</a>
+            <a id="menuactive">PODCAST</a>
             {% if user.is_authenticated %}
                 <a href="#">ACCOUNT</a>
             {% else %}
@@ -62,7 +62,7 @@
             <section id="intro">
                 <img src="{{ podcast.image.url }}" alt="{{podcast.title}}" style="width: 100%; height: auto;">
                 <div id="side">
-                    <h2 style="color: #fff; font-family: CrimsonPro;">About</h2>
+                    <h2 style="color: #fff;">About</h2>
                     <div id="pod-deet">{{ podcast.description | safe}}</div>
                     <div class="dropdown">
                         <button class="dropbtn">LISTEN ON AN APP | ▼</button>
@@ -89,7 +89,7 @@
                     <div class="podcast-epi">
                         <!-- <a href="{% url 'core:episode' s=episode.season e=episode.id slug=episode.slug %}">
                         </a> -->
-                        <img src="{{ episode.image.url }}" alt="{{ episode.title }}" style="width: 100%; height: auto;">
+                        <img src="{{ episode.image.url }}" alt="{{ podcast.title|slugify }}-{{ episode.title|slugify }}" style="width: 100%; height: auto;">
                         <p class="epi-id">#{{ episode.id }}</p>
                         <p class="epi-deet">{{ episode.title }}</p>
                         <div class="epi-play">
@@ -141,7 +141,7 @@
             </div>
             <a>© 2021 Leroy Buliro. All rights reserved.</a>
             <span>
-                <a href="{% url 'core:privacy' %}">Legal</a>
+                <a href="{% url 'core:legal' %}">Legal</a>
             </span>
         </div>
 
