--- a/core/static/core/podcast.css
+++ b/core/static/core/podcast.css
@@ -70,6 +70,25 @@ body {
     text-decoration: line-through;
     color: #000;
 }
+.access {
+    position: absolute;
+    top: 28%;
+    right: 2%;
+    transform: translate(-50%, -50%);
+}
+.accessbtn {
+    font-family: Josefin Sans;
+    font-size: medium;
+    color: #fff;
+    background-color: #4b6cff;
+    border-radius: 4px;
+    padding: 2px 7px;
+    text-decoration: none;
+}
+.accessbtn:hover {
+    text-decoration: none;
+    font-weight: bolder;
+}
 
 /* Hamburger menu */
 
@@ -157,7 +176,7 @@ body {
 }
 
 @media screen and (max-width: 980px) {
-    .navmenu {
+    .navmenu, .access {
         display: none;
     }
     .menu-btn {
@@ -168,7 +187,7 @@ body {
     .topnav {
         height: 33px;
     }
-    #navlogo, #navsocial {
+    #navlogo, .access {
         top: 10%;
     }
 }
