--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -41,6 +41,13 @@
                 <a href="{% url 'core:blogpage' %}">BLOG</a>
                 <a id="menuactive">PODCAST</a>
             </div>
+            <div class="access">
+                {% if user.is_authenticated %}
+                <a href="{% url 'account:logout' %}"><button class="accessbtn">Log out</button></a>
+                {% else %}
+                <a href="{% url 'account:auth' %}"><button class="accessbtn">Sign in</button></a>
+                {% endif %}
+            </div>
             <div class="menu-btn">
                 <div class="menu-btn__burger"></div>
             </div>
@@ -51,9 +58,9 @@
             <a href="{% url 'core:blogpage' %}">BLOG</a>
             <a id="menuactive">PODCAST</a>
             {% if user.is_authenticated %}
-                <a href="#">ACCOUNT</a>
+                <a href="{% url 'account:logout' %}">LOG OUT</a>
             {% else %}
-                <a href="#">SIGN IN</a>
+                <a href="{% url 'account:auth' %}">SIGN IN</a>
             {% endif %}
         </div>
 
