--- a/account/templates/account/subscribe.html
+++ b/account/templates/account/subscribe.html
@@ -6,7 +6,7 @@
 {% endblock pagetitle%}
 
 {% block pageheader %}
-<h3 style="text-align: center; margin-bottom: 7vh;">Create your account</h3>
+<h3 style="text-align: center;">Create your account</h3>
 {% endblock pageheader %}
 
 
