--- a/account/templates/account/auth.html
+++ b/account/templates/account/auth.html
@@ -6,7 +6,7 @@
 {% endblock pagetitle %}
 
 {% block pageheader %}
-<h3 style="text-align: center; margin-bottom: 7%;">Log in or create your account</h3>
+<h3 style="text-align: center;">Log in or create your account</h3>
 {% endblock pageheader %}
         
 {% block form %}
