--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -6,7 +6,7 @@
 {% endblock pagetitle %}
 
 {% block pageheader %}
-<h3 style="text-align: center; margin-bottom: 7vh;">Log into your account</h3>
+<h3 style="text-align: center;">Log into your account</h3>
 {% endblock pageheader %}
 
 
