--- a/core/templates/core/blogbase.html
+++ b/core/templates/core/blogbase.html
@@ -34,12 +34,14 @@
     <body>
         <nav class="topnav">
             <a id="navlogo" href="{% url 'core:index' %}">
-                <img src="{% static 'core/media/atlbwhite.png' %}" alt="logo" >
+                <img src="{% static 'core/media/lbwhite.png' %}" alt="logo" >
             </a>
+            
             <div class="navmenu">
                 {% block navmenu %}
                 {% endblock navmenu %}
             </div>
+
             <div class="access">
                 {% if user.is_authenticated %}
                 <a href="{% url 'account:logout' %}"><button class="accessbtn">Log out</button></a>
@@ -47,6 +49,7 @@
                 <a href="{% url 'account:auth' %}"><button class="accessbtn">Sign in</button></a>
                 {% endif %}
             </div>
+
             <div class="menu-btn">
                 <div class="menu-btn__burger"></div>
             </div>
