--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -34,20 +34,22 @@
     <body>
         <nav class="topnav">
             <a id="navlogo" href="{% url 'core:index' %}">
-                <img src="{% static 'core/media/atlbwhite.png' %}" alt="logo" >
+                <img src="{% static 'core/media/lbwhite.png' %}" alt="logo" >
             </a>
             <div class="navmenu">
                 <a href="{% url 'core:index' %}">HOME</a>
                 <a href="{% url 'core:blogpage' %}">BLOG</a>
                 <a id="menuactive">PODCAST</a>
             </div>
-            <div class="access">
+
+            <div id="access">
                 {% if user.is_authenticated %}
                 <a href="{% url 'account:logout' %}"><button class="accessbtn">Log out</button></a>
                 {% else %}
                 <a href="{% url 'account:auth' %}"><button class="accessbtn">Sign in</button></a>
                 {% endif %}
             </div>
+
             <div class="menu-btn">
                 <div class="menu-btn__burger"></div>
             </div>
@@ -56,7 +58,7 @@
         <div class="mobile-menu">
             <a href="{% url 'core:index' %}">HOME</a>
             <a href="{% url 'core:blogpage' %}">BLOG</a>
-            <a id="menuactive">PODCAST</a>
+            <a href="#">PODCAST</a>
             {% if user.is_authenticated %}
                 <a href="{% url 'account:logout' %}">LOG OUT</a>
             {% else %}
