--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -105,8 +105,8 @@
     {% endif %}
 </div>
 
-<!-- <div class="centered">
+<div id="showbtn">
     <button id="loadnext">SHOW MORE</button>
-</div> -->
+</div>
     
 {% endblock body %}
