--- a/core/templates/core/events.html
+++ b/core/templates/core/events.html
@@ -1,54 +1,123 @@
-{% extends "core\core.html" %}
 {% load static %}
 
-{% block title %}
-    <title>Gigs | Leroy Buliro</title>
-{% endblock title %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block style %}
-<link rel="stylesheet" href="{% static 'core/events.css' %}">
-{% endblock style %}
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        
+        <link rel="icon" type="image/png" href="{% static 'core/media/fbl.jpg' %}">
 
-{% block navmenu %}
-    <a href="{% url 'core:blogpage' %}">BLOG</a>
-    <a href="{% url 'core:podcast' %}">PODCAST</a>
-    <a id="menuactive">GIGS</a>
-{% endblock navmenu %}
+        <!-- meta author -->
+        <meta name="author" content="Leroy Buliro">
 
-{% block body %}
-<div class="eventpage">
+        <!-- site meta tags-->
+        <title>Events | Leroy Buliro</title>
 
-    <div>
-        <p class="pagetitle">UPCOMING GIGS</p>
-        {% if gigs %}
-        <div class="eventcontainer">
-            {% for gig in gigs %}
-                <div class="container">
-                    <img src="{{ event.poster.url }}" alt="{{ event.name }}" style="float: left;">
-                    <div class="text-block">
-                        <p>{{ gig.date }}</p>
-                        <p>{{ gig.name }}</p>
-                        <p>{{ gig.location }}</p>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-        {% else %}
-        <div style="text-align: center;">
-            <p>no upcoming gigs</p>
-        </div>
-        {% endif %}
-    </div>
+        <meta name="docsearch:language" content="en">
+        <link rel="canonical" href="https://leroybuliro.com/">
 
-    <div>
-        <p class="pagetitle">PAST GIGS</p>
-            {% for event in events %}
-            <div class="text-block">
-                <p>{{ event.date }} | {{ event.name }} | {{ event.location }}</p>
+        <!-- Load css file -->
+        <link rel="stylesheet" href="{% static 'core/events.css' %}">
+
+        <!-- Load js file -->
+        <script src="{% static 'core/base.js' %}"></script>
+    </head>
+
+    <body>
+        <nav class="topnav">
+            <a id="navlogo" href="{% url 'core:index' %}">
+                <img src="{% static 'core/media/lbwhite.png' %}" alt="logo" >
+            </a>
+
+            <div class="navmenu">
+                <a href="{% url 'core:blogpage' %}">BLOG</a>
+                <a href="{% url 'core:podcast' %}">PODCAST</a>
+                <a id="menuactive">GIGS</a>
             </div>
-            {% endfor %}
-        </div>
-    </div>
 
-</div>
-{% endblock body %}
+            <div id="access">
+                {% if user.is_authenticated %}
+                <a href="{% url 'account:logout' %}"><button class="accessbtn">Log out</button></a>
+                {% else %}
+                <a href="{% url 'account:auth' %}"><button class="accessbtn">Sign in</button></a>
+                {% endif %}
+            </div>
+
+            <div class="menu-btn">
+                <div class="menu-btn__burger"></div>
+            </div>
+        </nav>
+        
+        <div class="mobile-menu">
+            <a href="{% url 'core:index' %}">HOME</a>
+            <a href="{% url 'core:blogpage' %}">BLOG</a>
+            <a href="{% url 'core:podcast' %}">PODCAST</a>
+            <a id="menuactive">EVENTS</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'account:logout' %}">LOG OUT</a>
+            {% else %}
+                <a href="{% url 'account:auth' %}">SIGN IN</a>
+            {% endif %}
+        </div>
+        
+        <div class="eventpage">
+
+            <div>
+                <p class="pagetitle">UPCOMING GIGS</p>
+                {% if gigs %}
+                <div class="gigcontainer">
+                    {% for gig in gigs %}
+                        <div class="container">
+                            <img src="{{ gig.poster.url }}" alt="{{ gig.name }}" style="float: left;">
+                            <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                                <p>{{ gig.date }}</span>
+                                <p>{{ gig.name }}</p>
+                                <p>{{ gig.location }}</p>
+                            </div>
+                        </div>
+                        {% endfor %}
+                </div>
+                {% else %}
+                <div style="text-align: center;">
+                    <p style="color: #ffffff;">no upcoming gigs</p>
+                </div>
+                {% endif %}
+            </div>
+            
+            <div>
+                <p class="pagetitle">PAST GIGS</p>
+                <div class="eventcontainer">
+                    {% for event in events %}
+                    <div class="container">
+                        <div style="object-fit: cover;">
+                            <img src="{{ event.poster.url }}" alt="{{ event.name }}" style="width: 100%; height: 100%;">
+                        </div>
+                        <div style="display: flex; flex-direction: column; text-align: left;">
+                            <p style="color: #b6b6b6;">{{ event.date }}</p>
+                            <h4>{{ event.name }}</h4>
+                            <br>
+                            <p>{{ event.location }}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                </div>
+            </div>
+        
+        </div>
+    
+        <footer>
+            <div id="footersocial">
+                <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
+                <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
+            </div>
+            <a>© 2021 Leroy Buliro. All rights reserved.</a>
+            <span>
+                <a href="{% url 'core:legal' %}">Legal</a>
+            </span>
+        </footer>
+    </body>
+</html>
