--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -61,6 +61,7 @@
                     <div id="links">
                         <a href="{% url 'core:blogpage' %}" >BLOG</a>
                         <a href="{% url 'core:podcast' %}" >PODCAST</a>
+                        <a href="{% url 'core:event' %}" >EVENTS</a>
                         <!-- <a href="https://calendly.com/lerbfinancial/consultation/" >BOOK A FINANCIAL CONSULTATION</a> -->
                         {% if user.is_authenticated %}
                             <a href="{% url 'account:logout' %}">LOG OUT</a>
