--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -176,4 +176,45 @@
         </footer>
 
     </body>
+    <script>
+        /* menu */
+    
+    const menuBtn = document.querySelector('.menu-btn');
+    let menuOpen = false;
+    
+    menuBtn.addEventListener('click', () => {
+        const mobMenu = document.querySelector('.mobile-menu');
+        
+        if(!menuOpen){
+            menuBtn.classList.add('open');
+            mobMenu.classList.add('show');
+            menuOpen= true;
+        } else {
+            menuBtn.classList.remove('open');
+            mobMenu.classList.remove('show');
+            menuOpen = false;
+        }
+    });
+
+    /* Dropdown */
+
+    document.querySelector('.dropbtn').onclick = ()=> {
+        document.querySelector('#myDropdown').classList.toggle('show')
+    };
+
+    // Close the dropdown if the user clicks outside of the Dropdown button
+
+    window.onclick = function(event) {
+        if (!event.target.matches('.dropbtn')) {
+            var dropdowns = document.getElementsByClassName("dropdown-content");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+                var openDropdown = dropdowns[i];
+                if (openDropdown.classList.contains('show')) {
+                    openDropdown.classList.remove('show');
+                }
+            }
+        }
+    };
+    </script>
 </html>
