--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -180,7 +180,7 @@
     <body>
         <nav class="topnav">
             <div  id="navlogo">
-                <a href="{% url 'core:index' %}"><img src="{% static 'account/media/atlbblack.png' %}" alt="logo" width="auto" height="27" /></a>
+                <a href="{% url 'core:index' %}"><img src="{% static 'account/media/lbblack.png' %}" alt="logo" width="auto" height="27" /></a>
             </div>
         </nav>
 
