--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -10,6 +10,16 @@
     src: url('/static/core/fonts/IndieFlower-Regular.ttf') format('truetype');
     font-weight: 400;
 }
+@font-face {
+    font-family: CrimsonPro;
+    src: url('/static/core/fonts/CrimsonPro-VariableFont.ttf') format('truetype');
+    font-weight: 400;
+}
+@font-face {
+    font-family: Josefin Sans;
+    src: url('/static/core/fonts/JosefinSans-VariableFont_wght.ttf') format('truetype');
+    font-weight: 400;
+}
 body {
     background-color: #000000;
     height: 100vh;
@@ -99,4 +109,23 @@ a {
 a:hover {
     text-decoration: none;
     font-size: 24px;
+}
+#bio {
+    position: absolute;
+    bottom: 10%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    grid-gap: 10px;
+}
+p {
+    font-family: Josefin Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1rem;
+    text-decoration: none;
+    color: #ffffffc4;
 }
