--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -9,7 +9,7 @@
         
         <title>Fueled By Leroy</title>
         <link rel="icon" type="image/png" href="{% static 'core/media/fbl.jpg' %}">
-        <meta name="description" content="Leroy Buliro: deejay, financial advisor, writer, podcaster">
+        <meta name="description" content="Leroy Buliro: deejay, storyteller, financial advisor">
         <meta name="keyword" content="Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture">
 
         <!-- meta author -->
@@ -59,9 +59,9 @@
                         <img id="image" src="{% static 'core/media/about.jpg' %}" alt="leroy">
                     </div>
                     <div id="links">
+                        <a href="{% url 'core:event' %}" >EVENTS</a>
                         <a href="{% url 'core:blogpage' %}" >BLOG</a>
                         <a href="{% url 'core:podcast' %}" >PODCAST</a>
-                        <a href="{% url 'core:event' %}" >EVENTS</a>
                         <!-- <a href="https://calendly.com/lerbfinancial/consultation/" >BOOK A FINANCIAL CONSULTATION</a> -->
                         {% if user.is_authenticated %}
                             <a href="{% url 'account:logout' %}">LOG OUT</a>
@@ -69,9 +69,12 @@
                             <a href="{% url 'account:auth' %}">SIGN IN</a>
                         {% endif %}
                     </div>
+                    <div id="bio">
+                        <p>deejay ◊ storyteller ◊ quant</p>
+                    </div>
                 </section>
 
-                <video src="{% static 'core/media/hpvid3.mp4' %}" autoplay muted loop></video>
+                <video src="{% static 'core/media/intro.mp4' %}" autoplay muted loop></video>
 
             </div>
         </div>
