--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,4 +1,4 @@
-{% include 'core/feedbackModal.html' %}
+<!-- {% include 'core/feedbackModal.html' %} -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -99,8 +99,7 @@
         {% block body %}
         {% endblock body %}
         
-        {% block feedbackModal %}
-        {% endblock feedbackModal %}
+        
 
         <footer>
             <div id="footersocial">
