--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -35,12 +35,14 @@
 
 {% block navmenu %}
     <a  class="navlink" href="{% url 'core:index' %}">HOME</a>
+    <a  class="navlink" href="{% url 'core:event' %}">EVENTS</a>
     <a id="menuactive">BLOG</a>
     <a class="navlink" href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock navmenu %}
 
 {% block mobmenu %}
     <a href="{% url 'core:index' %}">HOME</a>
+    <a  href="{% url 'core:event' %}">EVENTS</a>
     <a href="#">BLOG</a>
     <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock mobmenu %}
