--- a/core/templates/core/events.html
+++ b/core/templates/core/events.html
@@ -33,9 +33,10 @@
             </a>
 
             <div class="navmenu">
+                <a href="{% url 'core:index' %}">HOME</a>
+                <a id="menuactive">EVENTS</a>
                 <a href="{% url 'core:blogpage' %}">BLOG</a>
                 <a href="{% url 'core:podcast' %}">PODCAST</a>
-                <a id="menuactive">GIGS</a>
             </div>
 
             <div id="access">
@@ -53,9 +54,9 @@
         
         <div class="mobile-menu">
             <a href="{% url 'core:index' %}">HOME</a>
+            <a id="menuactive">EVENTS</a>
             <a href="{% url 'core:blogpage' %}">BLOG</a>
             <a href="{% url 'core:podcast' %}">PODCAST</a>
-            <a id="menuactive">EVENTS</a>
             {% if user.is_authenticated %}
                 <a href="{% url 'account:logout' %}">LOG OUT</a>
             {% else %}
@@ -65,9 +66,9 @@
         
         <div class="eventpage">
 
+            {% if gigs.count >= 1 %}
             <div>
                 <p class="pagetitle">UPCOMING GIGS</p>
-                {% if gigs %}
                 <div class="gigcontainer">
                     {% for gig in gigs %}
                         <div class="container">
@@ -80,12 +81,8 @@
                         </div>
                         {% endfor %}
                 </div>
-                {% else %}
-                <div style="text-align: center;">
-                    <p style="color: #ffffff;">no upcoming gigs</p>
-                </div>
-                {% endif %}
             </div>
+            {% endif %}
             
             <div>
                 <p class="pagetitle">PAST GIGS</p>
