--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -59,8 +59,8 @@
                         <img id="image" src="{% static 'core/media/about.jpg' %}" alt="leroy">
                     </div>
                     <div id="links">
+                        <a href="#" style="text-decoration: line-through;">MIXES</a>
                         <a href="{% url 'core:event' %}" >EVENTS</a>
-                        <a href="#" >MIXES</a>
                         <a href="{% url 'core:blogpage' %}" >BLOG</a>
                         <a href="{% url 'core:podcast' %}" >PODCAST</a>
                         <!-- <a href="https://calendly.com/lerbfinancial/consultation/" >BOOK A FINANCIAL CONSULTATION</a> -->
